<resources>
    <string name="app_name">TMT</string>
    <string name="login_title">Team Access</string>
    <string name="login_subtitle">Enter your registered mobile number to access your TMT workspace.</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="login_button">Continue</string>
    <string name="nav_home">Home</string>
    <string name="nav_voice">Voice</string>
    <string name="nav_events">Events</string>
    <string name="nav_reminders">Reminders</string>
    <string name="nav_documents">Documents</string>
    <string name="nav_profile">Profile</string>
    <string name="record_voice">Record Voice</string>
    <string name="stop_recording">Stop Recording</string>
    <string name="uploading">Uploading media...</string>
    <string name="logout">Logout</string>
</resources>
